--- a/popup.css
+++ b/popup.css
@@ -1,47 +1,129 @@
 .top {
-	background-color: #181818;
-	color: #fff;
-	border: 2px solid #fff;
-	border-radius: 6px;
-	padding-bottom: 20%;
+	--background-color: #101010;
+	--acsent-color: #576CA8;
+	--darker-acsent-color: #15171f;
+	--font-color: #fff;
+	background: linear-gradient(var(--background-color), var(--darker-acsent-color));
+	color: var(--font-color);
+	border: 2px solid var(--font-color);
+	border-radius: 9px;
 }
 
-.blue {color: #aec6cf;}
+div {
+	text-align: center;
+	padding-bottom: 3%;
+}
+
+.acsent {color: var(--acsent-color);}
+.dacsent {color: var(--darker-acsent-color);}
 
 .top h1 {
-	padding: 1rem;
-	font-size: 3em;
 	margin: auto;
 	text-align: center;
+	font-size: 3em;
+	padding: 5%;
 	font-family: arial;
 }
 .top p {
-	margin: auto;
-	text-align: center;
 	font-family: Monospace;
-}
-
-.links a {
-	color: #aec6cf;
-	margin-left: 20px;
-}
-
-.head {
 	margin: auto;
 	text-align: center;
+}
+#settings p {
+	padding: 12px;
+}
+
+a {
+	transition: 500ms;
+	color: var(--font-color);;
+	margin: 1%;
+}
+a:hover {color: var(--acsent-color);}
+
+.container {
+	font-family: Monospace;
+	margin: 5%;
+	display: block;
+	color:  var(--acsent-color);
+	transition: 500ms;
+	cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  margin-left: 5%;
+  transition: 500ms;
+  border: 3px solid var(--acsent-color);
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+   border: 3px solid var(--font-color);;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  border: 3px solid var(--acsent-color);
+  
+}
+.container:hover input:checked ~ .checkmark {
+   border: 3px solid var(--font-color);;
+}
+
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  width: 5px;
+  height: 10px;
+  left: 6px;
+  border: 2px solid var(--font-color);
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.head {
 	font-family: Monospace;
 	font-size: 1em;
-	padding: 2%;
 }
 
 .logdiv {
 	top: 0; 
 	left: 0;
+	height: 100px;
+    overflow-y: auto;
 	font-family: Monospace;
+	border-radius: 6px;
+	margin-bottom: 20%;
 }
 .log {
 	display: block;
 	padding-left: 10px;
 	padding-right: 10px;
 }
-
